--- a/rachi/rachi.css
+++ b/rachi/rachi.css
@@ -1,5 +1,5 @@
-  @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Sora:wght@300;500;600&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Sora:wght@300;500;600&display=swap");
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -8,23 +8,22 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: 'Sora', sans-serif;
-    background: #EFF8FF;
+    font-family: "Sora", sans-serif;
+    background: #eff8ff;
 }
 
 nav {
-    background-color: #FFFF;
+    background-color: #ffff;
     width: 100%;
     height: 70px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    padding: 2rem 0;
+    padding: 3rem ;
 }
 
-
 nav ul {
-    font-family: 'Inter', sans-serif;
+    font-family: "Inter", sans-serif;
     list-style: none;
     display: flex;
     font-size: 1rem;
@@ -35,49 +34,90 @@ nav ul {
 
 /* Fist information block */
 
-.block1{
+#banner {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 2rem;
 }
 
-h1 {
-    font-family: Sora;
-    color: #293145;
-}
 
-
-.btn {
-    background-color: #0F9AFE;
-    color: #FFFF;
-
-    border-radius: 50px;
-    gap: 10px;
-}
-
-
-
-/*Second info block*/
-
-.functions {
-    background-color: #FFFF;
-    width: 100%;
-    height: 70px;
+section#banner {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    padding: 2rem 0;
+    padding: 2rem 5rem;
+
+    background-color: #eff8ff;
 }
 
-
-.functions ul {
-    font-family: 'Inter', sans-serif;
-    list-style: none;
-    display: flex;
-
+section#banner div h1,p {
+    font-size: 3rem;
+    font-family: "Sora", sans-serif, Arial;
     font-weight: 500;
-    line-height: 22px;
-    letter-spacing: 0em;
+}
+
+#btn {
+    background-color: #0f9afe;
+    padding: 1rem 2rem;
+    border: none;
+    border-radius: 2rem;
+    box-shadow: #0f9afe80 2px 2px 10px 0px;
+    /*x (- esq, + dir) y (- cima, + baixo) blur spread*/
+    font-family: "Inter", sans-serif, Arial;
+    font-weight: 500;
+    color: #fff;
+    width: 12rem;
+    font-size: 1.1rem;
+    cursor: pointer;
+    transition: 0.2s;
+}
+button#btn:hover {
+    background-color: #1385FF;
+  }
+
+#btn {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+section#about {
+    display: flex;
+    flex-direction:column;
+    gap: 3rem;
+    padding: 3rem;
+}
+
+section#about h2{
+font-size: 2rem;
+justify-content: space-around;
+align-items: center;
+gap: 1rem;
+}
+
+div#cards-about{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
     gap: 1rem;
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card h3{
+    font-size: 1.1rem;
+    font-family: "Sora", sans-serif, Arial;
+    font-weight: 700;
+}
+
+.card p{
+    font-size: 1rem;
+    font-family: "Sora", sans-serif, Arial;
+    font-weight: 500;
+    text-align: center;
 }
